améliorations section hébergement

--- a/index.html
+++ b/index.html
@@ -25,10 +25,12 @@
                         <li><a href="#hebergements">Hébergements</a></li>
                         <li><a href="#activites">Activités</a></li>
                     </ul>                    
-                </nav>    
-                <ul>
-                    <li><a href=""><b style="color: #0065FC;">S'inscrire</b></a></li>
-                </ul>           
+                </nav>
+                <div id="inscription">
+                    <ul>
+                        <li><a href=""><b style="color: #0065FC;">S'inscrire</b></a></li>
+                    </ul>   
+                </div>   
             </div>
             <!-- navbar 2 small devices -->
             <div id="navbar2">
@@ -38,7 +40,7 @@
                         <li><a href=""><b style="color: #0065FC;">S'inscrire</b></a></li>
                     </ul>
                 </div>
-                <nav id="nav2">
+                <nav>
                     <ul>
                         <li><a href="#hebergements">Hébergements</a></li>
                         <li><a href="#activites">Activités</a></li>
@@ -57,12 +59,13 @@
                 <i class="fas fa-map-marker-alt"></i>
                 <form role="searchbox">
                     <input id="champ" type="search" name="ville" placeholder="Marseille, France" required>
-                    <button id="bouton" type="submit">Rechercher</button>
+                    <button id="bouton1" type="submit">Rechercher</button>
+                    <button id="bouton2" type="submit"><i class="fas fa-search"></i></button>
                 </form>
             </div>
             <!-- filtres -->
             <div id="filtres">
-                <p id="filtres_titre">Filtres</p>
+                <div id="filtres_titre"><p>Filtres</p></div>
                 <div class="selection">
                     <span><i class="fas fa-money-bill-wave-alt"></i></span><span>Economique</span>  
                 </div>
@@ -82,153 +85,153 @@
         </section>
         <!-- section hebergements -->
         <section id="hebergements">
-        <!-- resultats hebergements ville choisie -->
-        <div id="section_hebergements">
-            <div id="resultats_hebergements">            
-                <h1>Hébergements à Marseille</h1>
-                <div id="hebergements_container">
-                    <div class="hebergement_card">
-                        <a href="">
-                            <img src="images\hebergements\aubergelacannebiere_sm.jpg" alt="Auberge de la Cannebière">
-                            <div class=descriptif_h>                           
-                                <h2>Auberge de la Cannebière</h2>
-                                <p>Nuit à partir de 25€</p>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star" style="color: lightgrey"></i>                        
-                            </div>
-                        </a>
-                    </div>
-                    <div class="hebergement_card">
-                        <a href="">
-                            <img src="images\hebergements\hotelduport_sm.jpg" alt="Hôtel du port">
-                            <div class="descriptif_h">
-                                <h2>Hôtel du port</h2>
-                                <p>Nuit à partir de 52€</p>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="hebergement_card">
-                        <a href="">
-                            <img src="images\hebergements\hotellesmouettes_sm.jpg" alt="Hôtel Les mouettes">
-                            <div class="descriptif_h">
-                                <h2>Hôtel Les mouettes</h2>
-                                <p>Nuit à partir de 76€</p>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star" style="color: lightgrey"></i>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="hebergement_card">
-                        <a href="">
-                            <img src="images\hebergements\hoteldelamer_sm.jpg" alt="Hôtel de la mer">
-                            <div class="descriptif_h">
-                                <h2>Hôtel de la mer</h2>
-                                <p>Nuit à partir de 46€</p>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star" style="color: lightgrey"></i>
-                                <i class="fas fa-star" style="color: lightgrey"></i>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="hebergement_card">
-                        <a href="">
-                            <img src="images\hebergements\aubergelepanier_sm.jpg" alt="Auberge Le Panier">
-                            <div class="descriptif_h">
-                                <h2>Auberge Le Panier</h2>
-                                <p>Nuit à partir de 23€</p>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star" style="color: lightgrey"></i>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="hebergement_card">
-                        <a href="">
-                            <img src="images\hebergements\hotelchezamina_sm.jpg" alt="Hôtel chez Amina">
-                            <div class="descriptif_h">
-                                <h2>Hôtel chez Amina</h2>
-                                <p>Nuit à partir de 96€</p>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                            </div>
-                        </a>
-                    </div>
-                </div>    
-                <div><a href=""><h3>Afficher plus</h3></a></div>
-            </div>
-            <!-- resultats hebergements populaires -->
-            <div id="resultats_populaires">
-                <h1>Populaires<i class="fas fa-chart-line"></i></h1> 
-                <div id="populaires_container">
-                    <div class="populaire_card">
-                        <a href="">
-                            <img src="images\hebergements\hotellesoleildumatin_sm.jpg" alt="Hôtel Le soleil du matin">
-                            <div class="descriptif_p">
-                                <h2>Hôtel Le soleil du matin</h2>
-                                <p>Nuit à partir de 128€</p>
-                                <div class="populaire_icons">
+            <!-- resultats hebergements ville choisie -->
+            <div id="section_hebergements">
+                <div id="resultats_hebergements">            
+                    <h1>Hébergements à Marseille</h1>
+                    <div id="hebergements_container">
+                        <div class="hebergement_card">
+                            <a href="">
+                                <img src="images\hebergements\aubergelacannebiere_sm.jpg" alt="Auberge de la Cannebière">
+                                <div class=descriptif_h>                           
+                                    <h2>Auberge de la Cannebière</h2>
+                                    <p>Nuit à partir de 25€</p>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star" style="color: lightgrey"></i>                        
+                                </div>
+                            </a>
+                        </div>
+                        <div class="hebergement_card">
+                            <a href="">
+                                <img src="images\hebergements\hotelduport_sm.jpg" alt="Hôtel du port">
+                                <div class="descriptif_h">
+                                    <h2>Hôtel du port</h2>
+                                    <p>Nuit à partir de 52€</p>
                                     <i class="fas fa-star"></i>
                                     <i class="fas fa-star"></i>
                                     <i class="fas fa-star"></i>
                                     <i class="fas fa-star"></i>
                                     <i class="fas fa-star"></i>
                                 </div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="populaire_card">
-                        <a href="">
-                            <img src="images\hebergements\aucoeurdeleauchambredhote_sm.jpg" alt="Chambres d'hôtes Au coeur de l'eau">
-                            <div class="descriptif_p">
-                                <h2>Au coeur de l'eau Chambres d'hôtes</h2>
-                                <p>Nuit à partir de 71€</p>
-                                <div class="populaire_icons">
+                            </a>
+                        </div>
+                        <div class="hebergement_card">
+                            <a href="">
+                                <img src="images\hebergements\hotellesmouettes_sm.jpg" alt="Hôtel Les mouettes">
+                                <div class="descriptif_h">
+                                    <h2>Hôtel Les mouettes</h2>
+                                    <p>Nuit à partir de 76€</p>
                                     <i class="fas fa-star"></i>
                                     <i class="fas fa-star"></i>
                                     <i class="fas fa-star"></i>
                                     <i class="fas fa-star"></i>
                                     <i class="fas fa-star" style="color: lightgrey"></i>
                                 </div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="populaire_card">
-                        <a href="">
-                            <img src="images\hebergements\hoteltoutbleuetblanc_sm.jpg" alt="Hôtel tout bleu et blanc">
-                            <div class="descriptif_p">
-                                <h2>Hôtel tout bleu et blanc</h2>
-                                <p>Nuit à partir de 68€</p>
-                                <div class="populaire_icons">
+                            </a>
+                        </div>
+                        <div class="hebergement_card">
+                            <a href="">
+                                <img src="images\hebergements\hoteldelamer_sm.jpg" alt="Hôtel de la mer">
+                                <div class="descriptif_h">
+                                    <h2>Hôtel de la mer</h2>
+                                    <p>Nuit à partir de 46€</p>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star" style="color: lightgrey"></i>
+                                    <i class="fas fa-star" style="color: lightgrey"></i>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="hebergement_card">
+                            <a href="">
+                                <img src="images\hebergements\aubergelepanier_sm.jpg" alt="Auberge Le Panier">
+                                <div class="descriptif_h">
+                                    <h2>Auberge Le Panier</h2>
+                                    <p>Nuit à partir de 23€</p>
                                     <i class="fas fa-star"></i>
                                     <i class="fas fa-star"></i>
                                     <i class="fas fa-star"></i>
                                     <i class="fas fa-star"></i>
                                     <i class="fas fa-star" style="color: lightgrey"></i>
                                 </div>
-                            </div>
-                        </a>
+                            </a>
+                        </div>
+                        <div class="hebergement_card">
+                            <a href="">
+                                <img src="images\hebergements\hotelchezamina_sm.jpg" alt="Hôtel chez Amina">
+                                <div class="descriptif_h">
+                                    <h2>Hôtel chez Amina</h2>
+                                    <p>Nuit à partir de 96€</p>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                </div>
+                            </a>
+                        </div>
+                    </div>    
+                    <div><a href=""><h3>Afficher plus</h3></a></div>
+                </div>
+                <!-- resultats hebergements populaires -->
+                <div id="resultats_populaires">
+                    <h1>Populaires<i class="fas fa-chart-line"></i></h1> 
+                    <div id="populaires_container">
+                        <div class="populaire_card">
+                            <a href="">
+                                <img src="images\hebergements\hotellesoleildumatin_sm.jpg" alt="Hôtel Le soleil du matin">
+                                <div class="descriptif_p">
+                                    <h2>Hôtel Le soleil du matin</h2>
+                                    <p>Nuit à partir de 128€</p>
+                                    <div class="populaire_icons">
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="populaire_card">
+                            <a href="">
+                                <img src="images\hebergements\aucoeurdeleauchambredhote_sm.jpg" alt="Chambres d'hôtes Au coeur de l'eau">
+                                <div class="descriptif_p">
+                                    <h2>Au coeur de l'eau <br> Chambres d'hôtes</h2>
+                                    <p>Nuit à partir de 71€</p>
+                                    <div class="populaire_icons">
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star" style="color: lightgrey"></i>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="populaire_card">
+                            <a href="">
+                                <img src="images\hebergements\hoteltoutbleuetblanc_sm.jpg" alt="Hôtel tout bleu et blanc">
+                                <div class="descriptif_p">
+                                    <h2>Hôtel tout bleu et blanc</h2>
+                                    <p>Nuit à partir de 68€</p>
+                                    <div class="populaire_icons">
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star" style="color: lightgrey"></i>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </div>           
+            </div>           
         </section>
         <!-- section activites -->
         <section id="activites">
