améliorations navbar + media queries associés

--- a/index.html
+++ b/index.html
@@ -24,28 +24,20 @@
                     <ul>
                         <li><a href="#hebergements">Hébergements</a></li>
                         <li><a href="#activites">Activités</a></li>
+                        <li id="inscription"><a href="">S'inscrire</a></li>
                     </ul>                    
                 </nav>
-                <div id="inscription">
-                    <ul>
-                        <li><a href=""><b style="color: #0065FC;">S'inscrire</b></a></li>
-                    </ul>   
-                </div>   
             </div>
             <!-- navbar 2 small devices -->
             <div id="navbar2">
                 <div id="logo_inscription">
                     <img src="images/logo/reservia.svg" alt="Logo de Reservia">
-                    <ul>
-                        <li><a href=""><b style="color: #0065FC;">S'inscrire</b></a></li>
-                    </ul>
+                    <a id="inscription" href="">S'inscrire</a>
                 </div>
-                <nav>
-                    <ul>
-                        <li><a href="#hebergements">Hébergements</a></li>
-                        <li><a href="#activites">Activités</a></li>
-                    </ul>                    
-                </nav>                
+                <div id="nav">
+                    <a href="#hebergements">Hébergements</a>
+                    <a href="#activites">Activités</a>
+                </div>
             </div>            
             <div id="presentation">
                 <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
