finalisation media queries section recherche

--- a/index.html
+++ b/index.html
@@ -47,12 +47,18 @@
     <main>
         <!-- section recherche -->
         <section id="recherche">
-            <div id="searchbar">
+            <div id="searchbar1">
                 <i class="fas fa-map-marker-alt"></i>
                 <form role="searchbox">
                     <input id="champ" type="search" name="ville" placeholder="Marseille, France" required>
-                    <button id="bouton1" type="submit">Rechercher</button>
-                    <button id="bouton2" type="submit"><i class="fas fa-search"></i></button>
+                    <button id="bouton" type="submit">Rechercher</button>
+                </form>
+            </div>
+            <div id="searchbar2">
+                <i class="fas fa-map-marker-alt"></i>
+                <form role="searchbox">
+                    <input id="champ" type="search" name="ville" placeholder="Marseille, France" required>
+                    <button id="bouton" type="submit"><i class="fas fa-search"></i></button>
                 </form>
             </div>
             <!-- filtres -->
