--- a/index.html
+++ b/index.html
@@ -60,25 +60,13 @@
                 </form>
             </div>
 
-
-
-
-
-
-            <div id="searchbar1">
+            <!--<div id="searchbar1">
                 <i class="fas fa-map-marker-alt"></i>
                 <form role="searchbox">
                     <input id="champ" type="search" name="ville" placeholder="Marseille, France" required>
-                    <button id="bouton" type="submit"><i class="fas fa-search hide_desktop"></i><span class="hide_mobile">Rechercher</span></button>
+                    <button id="bouton" type="submit"><i class="fas fa-search" class="display_mobile"></i><span class="diplay_desktop">Rechercher</span></button>
                 </form>
-            </div>
-
-
-
-
-
-
-
+            </div>-->
 
             <!-- filtres -->
             <div id="filtres">
@@ -186,54 +174,42 @@
                 <div id="resultats_populaires">
                     <h1>Populaires<i class="fas fa-chart-line"></i></h1> 
                     <div id="populaires_container">
-                        <div class="populaire_card">
-                            <a href="">
+                        <a href="">
+                            <div>
                                 <img src="images\hebergements\hotellesoleildumatin_sm.jpg" alt="Hôtel Le soleil du matin">
-                                <div class="descriptif_p">
-                                    <h2>Hôtel Le soleil du matin</h2>
-                                    <p>Nuit à partir de 128€</p>
-                                    <div class="populaire_icons">
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
-                        <div class="populaire_card">
-                            <a href="">
+                                <h2>Hôtel Le soleil du matin</h2>
+                                <p>Nuit à partir de 128€</p>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                            </div>
+                        </a>
+                        <a href="">
+                            <div>
                                 <img src="images\hebergements\aucoeurdeleauchambredhote_sm.jpg" alt="Chambres d'hôtes Au coeur de l'eau">
-                                <div class="descriptif_p">
-                                    <h2>Au coeur de l'eau <br> Chambres d'hôtes</h2>
-                                    <p>Nuit à partir de 71€</p>
-                                    <div class="populaire_icons">
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star" style="color: lightgrey"></i>
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
-                        <div class="populaire_card">
-                            <a href="">
+                                <h2>Au coeur de l'eau <br> Chambres d'hôtes</h2>
+                                <p>Nuit à partir de 71€</p>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star" style="color: lightgrey"></i>
+                            </div>
+                        </a>
+                        <a href="">
+                            <div>
                                 <img src="images\hebergements\hoteltoutbleuetblanc_sm.jpg" alt="Hôtel tout bleu et blanc">
-                                <div class="descriptif_p">
-                                    <h2>Hôtel tout bleu et blanc</h2>
-                                    <p>Nuit à partir de 68€</p>
-                                    <div class="populaire_icons">
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star" style="color: lightgrey"></i>
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
+                                <h2>Hôtel tout bleu et blanc</h2>
+                                <p>Nuit à partir de 68€</p>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star" style="color: lightgrey"></i>
+                            </div>
+                        </a>
                     </div>
                 </div>
             </div>           
