ameliorations media queries hebergements

--- a/index.html
+++ b/index.html
@@ -172,7 +172,15 @@
                 </div>
                 <!-- resultats hebergements populaires -->
                 <div id="resultats_populaires">
-                    <h1>Populaires<i class="fas fa-chart-line"></i></h1> 
+                    <div id="l_title">
+                        <h1>Populaires</h1>
+                        <i class="fas fa-chart-line"></i>                     
+                    </div>
+                    <div id="s-m_title">
+                        <h1> Les plus populaires</h1>
+                        <i class="fas fa-chart-line"></i>                   
+                    </div>
+                    <!--<h1>Populaires<i class="fas fa-chart-line"></i></h1>-->
                     <div id="populaires_container">
                         <a href="">
                             <div>
