--- a/index.html
+++ b/index.html
@@ -172,11 +172,7 @@
                 </div>
                 <!-- resultats hebergements populaires -->
                 <div id="resultats_populaires">
-                    <div id="l_title">
-                        <h1>Populaires</h1>
-                        <i class="fas fa-chart-line"></i>                     
-                    </div>
-                    <div id="s-m_title">
+                    <div id="titre">
                         <h1> Les plus populaires</h1>
                         <i class="fas fa-chart-line"></i>                   
                     </div>
@@ -187,7 +183,7 @@
                                 <img src="images\hebergements\hotellesoleildumatin_sm.jpg" alt="Hôtel Le soleil du matin">
                                 <h2>Hôtel Le soleil du matin</h2>
                                 <p>Nuit à partir de 128€</p>
-                                <i class="fas fa-star"></i>
+                                <span class="icon"><i class="fas fa-star"></i></span>
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
@@ -199,7 +195,7 @@
                                 <img src="images\hebergements\aucoeurdeleauchambredhote_sm.jpg" alt="Chambres d'hôtes Au coeur de l'eau">
                                 <h2>Au coeur de l'eau <br> Chambres d'hôtes</h2>
                                 <p>Nuit à partir de 71€</p>
-                                <i class="fas fa-star"></i>
+                                <span class="icon"><i class="fas fa-star"></i></span>
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
@@ -211,7 +207,7 @@
                                 <img src="images\hebergements\hoteltoutbleuetblanc_sm.jpg" alt="Hôtel tout bleu et blanc">
                                 <h2>Hôtel tout bleu et blanc</h2>
                                 <p>Nuit à partir de 68€</p>
-                                <i class="fas fa-star"></i>
+                                <span class="icon"><i class="fas fa-star"></i></span>
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
