ameliorations section activites

--- a/index.html
+++ b/index.html
@@ -223,48 +223,48 @@
             <div id="resultats_activites">
                 <h1>Activités à Marseille</h1>
                 <div id="activites_container">
-                    <div class="suggestion">
+                    <div class="suggestion_l">
                         <a href="">
-                        <img src="images\activites\vieuxport_sm.jpg" alt="Vieux port" style="width: 300px; height: 425px;">
-                        <h2>Vieux port</h2>
+                            <img src="images\activites\vieuxport_sm.jpg" alt="Vieux port">
+                            <h2>Vieux port</h2>
                         </a>
                     </div>
-                    <div class="suggestion_small">
-                        <div class="suggestion">
+                    <div>
+                        <div class="suggestion_m">
                             <a href="">
-                            <img src="images\activites\fortdepomegues_sm.jpg" alt="Fort de Pomegues" style="width: 300px; height: 200px;">
-                            <h2>Fort de Pomegues</h2>
+                                <img src="images\activites\fortdepomegues_sm.jpg" alt="Fort de Pomegues">
+                                <h2>Fort de Pomegues</h2>
                             </a>
                         </div>
-                        <div class="suggestion">
+                        <div class="suggestion_xs">
                             <a href="">
-                            <img src="images\activites\ilesdufrioul_sm.jpg" alt="Iles du Frioul" style="width: 300px; height: 150px;">
-                            <h2>Iles du Frioul</h2>
-                            </a>
+                                <img src="images\activites\ilesdufrioul_sm.jpg" alt="Iles du Frioul">
+                                <h2>Iles du Frioul</h2>
+                            </a>    
                         </div>
                     </div>
-                    <div class="suggestion">
+                    <div class="suggestion_l">
                         <a href="">
-                        <img src="images\activites\parcnationaldescalanques_sm.jpg" alt="Parc national des Calanques" style="width: 300px; height: 425px;">
-                        <h2>Parc National des Calanques</h2>
+                            <img src="images\activites\parcnationaldescalanques_sm.jpg" alt="Parc national des Calanques">
+                            <h2>Parc National des Calanques</h2>
                         </a>
                     </div>
-                    <div class="suggestion_small">
-                        <div class="suggestion">
+                    <div>
+                        <div class="suggestion_xs">
                             <a href="">
-                            <img src="images\activites\notredamedelagarde_sm.jpg" alt="Notre Dame de la garde"  style="width: 300px; height: 175px;">
-                            <h2>Notre Dame de la garde</h2>
+                                <img src="images\activites\notredamedelagarde_sm.jpg" alt="Notre Dame de la garde" >
+                                <h2>Notre Dame de la garde</h2>
                             </a>
                         </div>
-                        <div class="suggestion">
+                        <div class="suggestion_m">
                             <a href="">
-                            <img src="images\activites\parclongchamp_sm.jpg" alt="Parc Longchamp" style="width: 300px; height: 175px;">
-                            <h2>Parc Longchamp</h2>
+                                <img src="images\activites\parclongchamp_sm.jpg" alt="Parc Longchamp">
+                                <h2>Parc Longchamp</h2>
                             </a>
                         </div>
                     </div>
                 </div>
-            </div>            
+            </div>
         </section>
     </main>
     <footer>
