--- a/index.html
+++ b/index.html
@@ -1,47 +1,52 @@
 <!DOCTYPE html>
 <html lang="fr">
-	<head>
-		<meta charset="utf-8" />
-        <title>Reservia</title>
-        <meta name="description" content="Outil de planification de vacances : trouver des hébergements et des activités dans la ville de son choix">       
-        <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-        <link rel="stylesheet" href="css/style.css" />
-        
-        <!-- lien vers police "raleway" -->    
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">    
-        
-        <!-- lien vers icones fontawesome -->
-        <script src="https://kit.fontawesome.com/437a0e72c7.js" crossorigin="anonymous"></script>    
-    </head>    
-	<body>
-        <!-- renseigner chaque lien vers page correspondante -->					
-        <header>            
-            <!-- navbar 1 medium to large devices -->
-            <nav id="navbar1">
+
+<head>
+    <meta charset="utf-8" />
+    <title>Reservia</title>
+    <meta name="description"
+        content="Outil de planification de vacances : trouver des hébergements et des activités dans la ville de son choix">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <link rel="stylesheet" href="css/style.css" />
+
+    <!-- lien vers police "raleway" -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
+        rel="stylesheet">
+
+    <!-- lien vers icones fontawesome -->
+    <script src="https://kit.fontawesome.com/437a0e72c7.js" crossorigin="anonymous"></script>
+</head>
+
+<body>
+    <!-- renseigner chaque lien vers page correspondante -->
+    <header>
+        <!-- navbar 1 medium to large devices -->
+        <nav id="navbar1">
+            <img src="images/logo/reservia.svg" alt="Logo de Reservia">
+            <ul>
+                <li><a href="#hebergements">Hébergements</a></li>
+                <li><a href="#activites">Activités</a></li>
+                <li id="inscription"><a href="">S'inscrire</a></li>
+            </ul>
+        </nav>
+        <!-- navbar 2 small devices -->
+        <nav id="navbar2">
+            <div id="logo_inscription">
                 <img src="images/logo/reservia.svg" alt="Logo de Reservia">
-                <ul>
-                    <li><a href="#hebergements">Hébergements</a></li>
-                    <li><a href="#activites">Activités</a></li>
-                    <li id="inscription"><a href="">S'inscrire</a></li>
-                </ul>                    
-            </nav>
-            <!-- navbar 2 small devices -->
-            <nav id="navbar2">
-                <div id="logo_inscription">
-                    <img src="images/logo/reservia.svg" alt="Logo de Reservia">
-                    <a id="inscription" href="">S'inscrire</a>
-                </div>
-                <div id="nav">
-                    <a href="#hebergements">Hébergements</a>
-                    <a href="#activites">Activités</a>
-                </div>
-            </nav>            
-            <div id="presentation">
-                <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
-                <p>En plein centre-ville ou en pleine nature</p>
+                <a id="inscription" href="">S'inscrire</a>
             </div>
-        </header>
+            <div id="nav">
+                <a href="#hebergements">Hébergements</a>
+                <a href="#activites">Activités</a>
+            </div>
+        </nav>
+        <div id="presentation">
+            <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
+            <p>En plein centre-ville ou en pleine nature</p>
+        </div>
+    </header>
     <main>
         <!-- section recherche -->
         <section id="recherche">
@@ -70,34 +75,38 @@
 
             <!-- filtres -->
             <div id="filtres">
-                <div id="filtres_titre"><p>Filtres</p></div>
+                <div id="filtres_titre">
+                    <p>Filtres</p>
+                </div>
                 <div class="selection">
-                    <span><i class="fas fa-money-bill-wave-alt"></i></span><span>Economique</span>  
+                    <span><i class="fas fa-money-bill-wave-alt"></i></span><span>Economique</span>
                 </div>
                 <div class="selection">
                     <span><i class="fas fa-child"></i></span><span>Familial</span>
                 </div>
-                <div class="selection">       
-                    <span><i class="fas fa-heart"></i></span><span>Romantique</span>           
+                <div class="selection">
+                    <span><i class="fas fa-heart"></i></span><span>Romantique</span>
                 </div>
                 <div class="selection">
-                    <span><i class="fas fa-dog"></i></span><span>Animaux autorisés</span>              
+                    <span><i class="fas fa-dog"></i></span><span>Animaux autorisés</span>
                 </div>
             </div>
             <div id="resultat">
-                <img src="images/icones/information.svg" alt="icone information"><span>Plus de 500 logements sont disponibles dans cette ville</span>
+                <img src="images/icones/information.svg" alt="icone information"><span>Plus de 500 logements sont
+                    disponibles dans cette ville</span>
             </div>
         </section>
         <!-- section hebergements -->
         <section id="hebergements">
             <!-- resultats hebergements ville choisie -->
             <div id="section_hebergements">
-                <div id="resultats_hebergements">            
+                <div id="resultats_hebergements">
                     <h1>Hébergements à Marseille</h1>
                     <div id="hebergements_container">
                         <a href="">
                             <div>
-                                <img src="images\hebergements\aubergelacannebiere_sm.jpg" alt="Auberge de la Cannebière">
+                                <img src="images\hebergements\aubergelacannebiere_sm.jpg"
+                                    alt="Auberge de la Cannebière">
                                 <h2>Auberge de la Cannebière</h2>
                                 <p>Nuit à partir de 25€</p>
                                 <i class="fas fa-star" style="padding-left: 10px"></i>
@@ -106,7 +115,7 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star" style="color: lightgrey"></i>
                             </div>
-                        </a>                                               
+                        </a>
                         <a href="">
                             <div>
                                 <img src="images\hebergements\hotelduport_sm.jpg" alt="Hôtel du port">
@@ -118,7 +127,7 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                             </div>
-                        </a>                                               
+                        </a>
                         <a href="">
                             <div>
                                 <img src="images\hebergements\hotellesmouettes_sm.jpg" alt="Hôtel Les mouettes">
@@ -130,7 +139,7 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star" style="color: lightgrey"></i>
                             </div>
-                        </a>                                               
+                        </a>
                         <a href="">
                             <div>
                                 <img src="images\hebergements\hoteldelamer_sm.jpg" alt="Hôtel de la mer">
@@ -142,7 +151,7 @@
                                 <i class="fas fa-star" style="color: lightgrey"></i>
                                 <i class="fas fa-star" style="color: lightgrey"></i>
                             </div>
-                        </a>                                               
+                        </a>
                         <a href="">
                             <div>
                                 <img src="images\hebergements\aubergelepanier_sm.jpg" alt="Auberge Le Panier">
@@ -154,7 +163,7 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star" style="color: lightgrey"></i>
                             </div>
-                        </a>                                               
+                        </a>
                         <a href="">
                             <div>
                                 <img src="images\hebergements\hotelchezamina_sm.jpg" alt="Hôtel chez Amina">
@@ -167,20 +176,23 @@
                                 <i class="fas fa-star"></i>
                             </div>
                         </a>
-                    </div>    
-                    <div><a href=""><h3>Afficher plus</h3></a></div>
+                    </div>
+                    <a href="">
+                        <h3>Afficher plus</h3>
+                    </a>
                 </div>
                 <!-- resultats hebergements populaires -->
                 <div id="resultats_populaires">
                     <div id="titre">
                         <h1> Les plus populaires</h1>
-                        <i class="fas fa-chart-line"></i>                   
+                        <i class="fas fa-chart-line"></i>
                     </div>
                     <!--<h1>Populaires<i class="fas fa-chart-line"></i></h1>-->
                     <div id="populaires_container">
                         <a href="">
                             <div>
-                                <img src="images\hebergements\hotellesoleildumatin_sm.jpg" alt="Hôtel Le soleil du matin">
+                                <img src="images\hebergements\hotellesoleildumatin_sm.jpg"
+                                    alt="Hôtel Le soleil du matin">
                                 <h2>Hôtel Le soleil du matin</h2>
                                 <p>Nuit à partir de 128€</p>
                                 <span class="icon"><i class="fas fa-star"></i></span>
@@ -192,7 +204,8 @@
                         </a>
                         <a href="">
                             <div>
-                                <img src="images\hebergements\aucoeurdeleauchambredhote_sm.jpg" alt="Chambres d'hôtes Au coeur de l'eau">
+                                <img src="images\hebergements\aucoeurdeleauchambredhote_sm.jpg"
+                                    alt="Chambres d'hôtes Au coeur de l'eau">
                                 <h2>Au coeur de l'eau <br> Chambres d'hôtes</h2>
                                 <p>Nuit à partir de 71€</p>
                                 <span class="icon"><i class="fas fa-star"></i></span>
@@ -204,7 +217,8 @@
                         </a>
                         <a href="">
                             <div>
-                                <img src="images\hebergements\hoteltoutbleuetblanc_sm.jpg" alt="Hôtel tout bleu et blanc">
+                                <img src="images\hebergements\hoteltoutbleuetblanc_sm.jpg"
+                                    alt="Hôtel tout bleu et blanc">
                                 <h2>Hôtel tout bleu et blanc</h2>
                                 <p>Nuit à partir de 68€</p>
                                 <span class="icon"><i class="fas fa-star"></i></span>
@@ -216,11 +230,11 @@
                         </a>
                     </div>
                 </div>
-            </div>           
+            </div>
         </section>
         <!-- section activites -->
         <section id="activites">
-            <div id="resultats_activites">
+            <div id="resultats_activites1">
                 <h1>Activités à Marseille</h1>
                 <div id="activites_container">
                     <div class="suggestion_l">
@@ -240,19 +254,20 @@
                             <a href="">
                                 <img src="images\activites\ilesdufrioul_sm.jpg" alt="Iles du Frioul">
                                 <h2>Iles du Frioul</h2>
-                            </a>    
+                            </a>
                         </div>
                     </div>
                     <div class="suggestion_l">
                         <a href="">
-                            <img src="images\activites\parcnationaldescalanques_sm.jpg" alt="Parc national des Calanques">
+                            <img src="images\activites\parcnationaldescalanques_sm.jpg"
+                                alt="Parc national des Calanques">
                             <h2>Parc National des Calanques</h2>
                         </a>
                     </div>
                     <div>
                         <div class="suggestion_xs">
                             <a href="">
-                                <img src="images\activites\notredamedelagarde_sm.jpg" alt="Notre Dame de la garde" >
+                                <img src="images\activites\notredamedelagarde_sm.jpg" alt="Notre Dame de la garde">
                                 <h2>Notre Dame de la garde</h2>
                             </a>
                         </div>
@@ -265,12 +280,54 @@
                     </div>
                 </div>
             </div>
+            <div id="resultats_activites2">
+                <h1>Activités à Marseille</h1>
+                <div id="activites_container">
+                    <div class="suggestion_l">
+                        <a href="">
+                            <img src="images\activites\vieuxport_sm.jpg" alt="Vieux port">
+                            <h2>Vieux port</h2>
+                        </a>
+                    </div>
+                    <div class="suggestion_m">
+                        <a href="">
+                            <img src="images\activites\fortdepomegues_sm.jpg" alt="Fort de Pomegues">
+                            <h2>Fort de Pomegues</h2>
+                        </a>
+                    </div>
+                    <div class="suggestion_xs">
+                        <a href="">
+                            <img src="images\activites\ilesdufrioul_sm.jpg" alt="Iles du Frioul">
+                            <h2>Iles du Frioul</h2>
+                        </a>
+                    </div>
+                    <div class="suggestion_l">
+                        <a href="">
+                            <img src="images\activites\parcnationaldescalanques_sm.jpg"
+                                alt="Parc national des Calanques">
+                            <h2>Parc National des Calanques</h2>
+                        </a>
+                    </div>
+                    <div class="suggestion_xs">
+                        <a href="">
+                            <img src="images\activites\notredamedelagarde_sm.jpg" alt="Notre Dame de la garde">
+                            <h2>Notre Dame de la garde</h2>
+                        </a>
+                    </div>
+                    <div class="suggestion_m">
+                        <a href="">
+                            <img src="images\activites\parclongchamp_sm.jpg" alt="Parc Longchamp">
+                            <h2>Parc Longchamp</h2>
+                        </a>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
     <footer>
         <div id="footer_container">
             <div class="footer_children">
-                <h2>A propos</h2>                    
+                <h2>A propos</h2>
                 <ul>
                     <li><a href="">Fonctionnement du site</a></li>
                     <li><a href="">Conditions générales de vente</a></li>
@@ -291,7 +348,8 @@
                     <li><a href="">Nous contacter</a></li>
                 </ul>
             </div>
-        </div>	
+        </div>
     </footer>
-    </body>
-</html>   
+</body>
+
+</html>
